<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textViewTanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="#fff"
        android:text="@string/tanggal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewSTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="STP"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/tp"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="135dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/p"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="185dp"
        android:text="@string/sp"
        android:textColor="#fff"
        android:textSize="18sp" />


</RelativeLayout>
